[project]
name = "link-khovanov"
version = "0.1.2"
description = "solve khovanov for link for both directions of each component."
authors = [
    {name = "GGN_2015",email = "neko@jlulug.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "javakh-interface>=0.2.2",
    "pd-code-sanity>=0.1.0",
    "pd-code-components>=0.1.0",
    "pd-code-connected-sum>=0.1.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
